--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<h1 class="text-uppercase my-4">My name is N1BOOK</h1>
 		<p class="font-italic lead">此平台用于Nu1L Team编写的《从0到1 CTFer的成长之路》书籍的在线配套环境</p>
 		<div class="showcase-examples l-over l-center">
- <a href="#" class="button button-glow button-border button-rounded button-primary">同步上线，敬请期待</a>
+ <a href="https://book.nu1l.com" class="button button-glow button-border button-rounded button-primary">https://book.nu1l.com</a>
   </div>
 		</div>
 	</div>
